Item 074: remove completed item from TODOS.md